# dpns-project

./: .gitignore  README.md  deeplabv3_model.py  evaluate.py  get_testing_images.py  main.py  pyproject.toml  testing.py  train_unet.py  train_val_sets.py  training.py  u2net_model.py  unet_model.py
models/deeplabv3/: test_deeplabv3.ipynb  train_deeplabv3.ipynb
models/u2net/: test_u2net.ipynb  train_u2net.ipynb
models/unet/: test_unet.ipynb  train_unet.ipynb
unet-demo/: package-lock.json  package.json
unet-demo/public/: index.html  manifest.json
unet-demo/src/: App.tsx
unet-demo/src/components/: ImageUpload.tsx  ResultDisplay.tsx
